# line-drawing

./: CMakeLists.txt  README.md
include/: bresenham.h  menu.h  point.h  render.h  xiaolin_wu.h
src/: bresenham.cpp  main.cpp  menu.cpp  render.cpp  xiaolin_wu.cpp
tests/: generate_endpoints.py  horizontal.in  negative.in  positive.in  steep_negative.in  steep_positive.in  vertical.in
tests/results/: horizontal_bresenham.out  horizontal_wu.out  negative_bresenham.out  negative_wu.out  positive_bresenham.out  positive_wu.out  steep_negative_bresenham.out  steep_negative_wu.out  steep_positive_bresenham.out  steep_positive_wu.out  test-results.xlsx  vertical_bresenham.out  vertical_wu.out
